fix: Properly align settings view to the center

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,11 +58,13 @@ body {
 }
 
 #settings-view {
-    position: absolute;
+    position: fixed;
+    margin: 0 auto;
     top: 100px;
-    margin-left: 10%;
-    width: 80vw;
-    height: 80vh;
+    right: 0;
+    left: 0;
+    width: 80%;
+    height: 650px;
     box-shadow: 0 4px 18px #555;
     background-color: #fff;
     box-sizing: border-box;
